# EastGuard

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  GUIDE.md  IDEAS.md  Makefile  PLAN.md  README.md  SCENARIOS.md  TESTS.md  architecture.md  cg-ownership.md  challenges.md  clippy.toml  eastguard.yaml.example  issue_summary.md  metadata_management_roadmap.md  run_cluster.sh  storage_implementation_plan.md
.agent-skills/: raft-actor-skill.md  raft-skill.md  storage-skill.md
.agents/: AGENTS.md
.cargo/: config.toml
.claude/rules/: code-convention.md  ds-rsm.md  metadata-state-machine.md  raft-actor.md  raft-transport.md  raft.md  scheduler.md  storage-layout.md  swim.md  topology.md
.github/workflows/: ci.yml
bugbase/: 433b423c.json  62ff933a.json  f9c6d101.json
diagrams/: diagram.md
diagrams/client/: d1_client.md
diagrams/clients/: c1_routing_and_connections.md  c2_producer.md  c3_consumer.md  client_roadmap.md
diagrams/data-plane/: d1_storage_engine.md  d2_produce_consume_api.md  d2_segment_replication.md  d3_segment_replication.md  d3_segment_roll_integration.md  d4_consumer_range_tracking.md  d4_segment_roll_integration.md  d5_consumer_range_tracking.md  d5_crash_recovery.md  d6_crash_recovery.md  d6_produce_consume_api.md  d7_retention_gc.md  d8_consumer_offset_management.md  data_plane_roadmap.md
diagrams/metadata-management/: data-model.md  ds-rsm.mmd  idea.md  leader-forwarding.mmd  membership-change-via-log.mmd  membership-reconciliation-and-rebalancing.md  mental-model.md  metadata_management_roadmap.md  storage-key-layout.md
docs/: backlogs.md
docs/clients/: c1_routing_and_connections.md  c2_producer.md  c3_consumer.md  c4_consumer_offset_commits.md  client_roadmap.md
docs/data-plane/: d10_transparent_retry_deduplication.md  d1_storage_engine.md  d2_segment_replication.md  d3_segment_roll_integration.md  d4_consumer_range_tracking.md  d5_crash_recovery.md  d6_produce_consume_api.md  d7_retention_gc.md  d8_consumer_offset_management.md  d9_offset_placement_graduation.md  data_plane_roadmap.md
docs/metadata-management/: d1_entity_model_and_lifecycle.md  d2_replicated_apply_and_durability.md  d3_routing_proposals_and_completion.md  d4_membership_and_shard_reconciliation.md  d5_segment_lifecycle_and_repair.md  d6_range_splitting_merging_and_load.md  d7_consumer_group_coordination.md  event-driven-range-load.md  mental-model.md  metadata_management_roadmap.md
eastguard/config/: node_id
rules/: raft-actor-skill.md  raft-skill.md  scheduler-skill.md  swim-skill.md
scripts/: stress_test.sh
simulator/: PLAN.md
src/: channels.rs  config.rs  lib.rs  net.rs  test_traits.rs
src/client/: admin.rs  codec.rs  error.rs  mod.rs  nodes.rs  pool.rs  produce.rs  record.rs  (+2 more)
tests/: cluster_simulation.rs
(+266 files in other folders)
