[package]
name = "east-guard"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
tokio = { version = "1.51.1", features = ["full"] }
clap = { version = "4.6.0", features = ["derive", "env"] }
bytes = "1.10.1"
bincode = { version = "2.0.1" }
rand = "0.10.1"
uuid = { version = "1.23.0", features = ["v4"] }
murmur3 = "0.5"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
thiserror = "2.0.18"
rocksdb = "0.24.0"


[lints.rust]
unexpected_cfgs = { level = "allow" }

[dev-dependencies]
tempfile = "3.27.0"
serial_test = "3.3.1"
turmoil = { version = "0.7.1", package = "turmoil" }
